parser/src/snapshots/rustpython_parser__function__tests__lambda_pos_and_kw_only_args.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Expr(
            StmtExpr {
                range: 0..26,
                value: Lambda(
                    ExprLambda {
                        range: 0..26,
                        args: FunctionArguments {
                            range: 7..23,
                            posonlyargs: [],
                            args: [
                                ArgWithDefault {
                                    range: 7..8,
                                    def: Arg {
                                        range: 7..8,
                                        arg: Identifier(
                                            "a",
                                        ),
                                        annotation: None,
                                        type_comment: None,
                                    },
                                    default: None,
                                },
                                ArgWithDefault {
                                    range: 10..11,
                                    def: Arg {
                                        range: 10..11,
                                        arg: Identifier(
                                            "b",
                                        ),
                                        annotation: None,
                                        type_comment: None,
                                    },
                                    default: None,
                                },
                                ArgWithDefault {
                                    range: 13..14,
                                    def: Arg {
                                        range: 13..14,
                                        arg: Identifier(
                                            "c",
                                        ),
                                        annotation: None,
                                        type_comment: None,
                                    },
                                    default: None,
                                },
                            ],
                            vararg: None,
                            kwonlyargs: [
                                ArgWithDefault {
                                    range: 19..20,
                                    def: Arg {
                                        range: 19..20,
                                        arg: Identifier(
                                            "d",
                                        ),
                                        annotation: None,
                                        type_comment: None,
                                    },
                                    default: None,
                                },
                                ArgWithDefault {
                                    range: 22..23,
                                    def: Arg {
                                        range: 22..23,
                                        arg: Identifier(
                                            "e",
                                        ),
                                        annotation: None,
                                        type_comment: None,
                                    },
                                    default: None,
                                },
                            ],
                            kwarg: None,
                        },
                        body: Constant(
                            ExprConstant {
                                range: 25..26,
                                value: Int(
                                    0,
                                ),
                                kind: None,
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
