parser/src/snapshots/rustpython_parser__function__tests__lambda_pos_args.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Expr(
            StmtExpr {
                range: 0..17,
                value: Lambda(
                    ExprLambda {
                        range: 0..17,
                        args: FunctionArguments {
                            range: 7..14,
                            posonlyargs: [],
                            args: [
                                ArgWithDefault {
                                    range: 7..8,
                                    def: Arg {
                                        range: 7..8,
                                        arg: Identifier(
                                            "a",
                                        ),
                                        annotation: None,
                                        type_comment: None,
                                    },
                                    default: None,
                                },
                                ArgWithDefault {
                                    range: 10..11,
                                    def: Arg {
                                        range: 10..11,
                                        arg: Identifier(
                                            "b",
                                        ),
                                        annotation: None,
                                        type_comment: None,
                                    },
                                    default: None,
                                },
                                ArgWithDefault {
                                    range: 13..14,
                                    def: Arg {
                                        range: 13..14,
                                        arg: Identifier(
                                            "c",
                                        ),
                                        annotation: None,
                                        type_comment: None,
                                    },
                                    default: None,
                                },
                            ],
                            vararg: None,
                            kwonlyargs: [],
                            kwarg: None,
                        },
                        body: Constant(
                            ExprConstant {
                                range: 16..17,
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
