parser/src/snapshots/rustpython_parser__function__tests__lambda_pos_args_with_defaults.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Expr(
            StmtExpr {
                range: 0..23,
                value: Lambda(
                    ExprLambda {
                        range: 0..23,
                        args: FunctionArguments {
                            range: 7..20,
                            posonlyargs: [],
                            args: [
                                ArgWithDefault {
                                    range: 7..8,
                                    def: Arg {
                                        range: 7..8,
                                        arg: Identifier(
                                            "a",
                                        ),
                                        annotation: None,
                                        type_comment: None,
                                    },
                                    default: None,
                                },
                                ArgWithDefault {
                                    range: 10..11,
                                    def: Arg {
                                        range: 10..11,
                                        arg: Identifier(
                                            "b",
                                        ),
                                        annotation: None,
                                        type_comment: None,
                                    },
                                    default: Some(
                                        Constant(
                                            ExprConstant {
                                                range: 12..14,
                                                value: Int(
                                                    20,
                                                ),
                                                kind: None,
                                            },
                                        ),
                                    ),
                                },
                                ArgWithDefault {
                                    range: 16..17,
                                    def: Arg {
                                        range: 16..17,
                                        arg: Identifier(
                                            "c",
                                        ),
                                        annotation: None,
                                        type_comment: None,
                                    },
                                    default: Some(
                                        Constant(
                                            ExprConstant {
                                                range: 18..20,
                                                value: Int(
                                                    30,
                                                ),
                                                kind: None,
                                            },
                                        ),
                                    ),
                                },
                            ],
                            vararg: None,
                            kwonlyargs: [],
                            kwarg: None,
                        },
                        body: Constant(
                            ExprConstant {
                                range: 22..23,
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
